* TRUST_PATH to upgarder. (stranger)
* a checker to see if TRUST_PATH exists in adminmenu, if it doesn't it will prompt admins from accessing admin menu. (stranger)
* a checker to see if email address already exists in adminmenu. (stranger)

'''Improved'''
* Updated system to version 1.10. (stranger)
* Function icms_cleaning_write_folders. (stranger)

'''Fixed'''
* Issues with google analytic textform in admin menu. (stranger)
* Issues with Jalalijscalendar option in admin menu. (stranger)
* Issues with new templates not being inserted in system module. (stranger)
* Issues with Jalalijscalendar option in Persian language. (stranger)
* Issues with reset buttons. (mcdonald3072)
* When converting the db to another character set during an upgrade, the default values were being dropped if they were empty strings (skenow)
* Issues with Jalalijscalendar button in forms. (stranger)
* Issue with upgrader, blocks got twice inserted. (stranger)
* Issue with upgrader, blocks permissions were not inserted. (skenow/stranger)
* Issue with upgrader, system sub-module permissions were not inserted. (stranger)
* Issue with theme_rtl. (stranger)
* Issue with <{if $xoops_contents}>. (stranger)
* Removed intermediate conversion of data to binary during db character set conversion, now the data integrity is improved

===2008-09-21 : 1.1 RC 2===

'''Added'''
* Adding movie filter in HTMLPurifier for Liveleak movies (vaughan)
* Adding movie filter in HTMLPurifier for vimeo movies (vaughan)
* Adding IcmsSecureForm to create IcmsPersistable object form with a seucirty token. We will recommend to always use this within the IcmsPersistable Framework when not on the admin side (malanciault)
* Added option to select calendar type for forms. (stranger)
* Updated system to version 1.05. (stranger)

'''Improved'''
* Rendering of Google Analytics script and new script source from Google (skenow)

'''Fixed'''